--- a/PITCHME.css
+++ b/PITCHME.css
@@ -10,3 +10,7 @@
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
     font-family: Arial, "Ubuntu Mono", Monaco;
 }
+
+.reveal .slides {
+    width: 1280px;
+}
