--- a/PITCHME.css
+++ b/PITCHME.css
@@ -8,9 +8,6 @@
 }
 
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
-    font-family: Arial, "Ubuntu Mono", Monaco;
+    font-family: Monaco, Arial, "Ubuntu Mono";
 }
 
-.reveal .slides {
-    width: 1280px;
-}
