--- a/PITCHME.css
+++ b/PITCHME.css
@@ -22,3 +22,10 @@
     margin-left: 10%;
     margin-right: 0;
 }
+
+
+.reveal section img {
+  border: 0;
+  box-shadow: none;
+  text-align: center;
+}
