--- a/PITCHME.css
+++ b/PITCHME.css
@@ -24,7 +24,8 @@
 }
 
 .reveal section img {
-  border: 0;
-  box-shadow: none;
-  margin-left: 10%;
+    border: 0;
+    box-shadow: none;
+    margin-left: 10%;
+    max-height: 400px;
 }
