--- a/PITCHME.css
+++ b/PITCHME.css
@@ -27,6 +27,6 @@
     border: 0;
     box-shadow: none;
     margin-left: 20%;
-    max-height: 500px;
-    max-width: 450px;
+    max-height: 60%;
+    max-width: 60%;
 }
