--- a/PITCHME.css
+++ b/PITCHME.css
@@ -22,3 +22,11 @@
     margin-left: 10%;
     margin-right: 0;
 }
+
+.reveal section img {
+    border: 0;
+    box-shadow: none;
+    margin-left: 20%;
+    max-height: 500px;
+    text-align: center;
+}
