--- a/PITCHME.css
+++ b/PITCHME.css
@@ -14,7 +14,7 @@
 }
 
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
-    font-family: Monaco, Arial, "Ubuntu Mono";
+    font-family: Monaco, "Ubuntu Mono", Arial;
     text-align: center;
 }
 
