--- a/PITCHME.css
+++ b/PITCHME.css
@@ -14,11 +14,19 @@
 }
 
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
-    font-family: Monaco, Arial, "Ubuntu Mono";
+    font-family: Consolas, Monaco, Arial, "Ubuntu Mono";
     text-align: center;
 }
 
 .reveal .slides section>ul {
     margin-left: 10%;
     margin-right: 0;
+}
+
+.reveal section img {
+    border: 0;
+    box-shadow: none;
+    margin-left: 20%;
+    max-height: 500px;
+    text-align: center;
 }
