Unicode is cool :)

--- a/PITCHME.css
+++ b/PITCHME.css
@@ -26,6 +26,7 @@
 .reveal section img {
     border: 0;
     box-shadow: none;
+    align: center;
     max-height: 500px;
     text-align: center;
 }
