--- a/PITCHME.css
+++ b/PITCHME.css
@@ -5,7 +5,7 @@
 
 .reveal pre code {
     max-height: 550px;
-    font-family: Monaco, "Ubuntu Mono";
+    font-family: Consolas, Monaco, "Ubuntu Mono";
 }
 
 .reveal .slides {
@@ -14,7 +14,7 @@
 }
 
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
-    font-family: Monaco, Arial, "Ubuntu Mono";
+    font-family: Consolas, Monaco, Arial, "Ubuntu Mono";
     text-align: center;
 }
 
@@ -22,7 +22,6 @@
     margin-left: 10%;
     margin-right: 0;
 }
-
 
 .reveal section img {
     border: 0;
