--- a/PITCHME.codemax.css
+++ b/PITCHME.codemax.css
@@ -20,6 +20,10 @@ html:-moz-full-screen-ancestor {
   background-color: #fff;
 }
 
+.reveal .slides {
+    font-size: 32px !important;
+}
+
 .reveal pre {
   width: 100%;
   box-shadow : none;
@@ -41,14 +45,24 @@ html:-moz-full-screen-ancestor {
   font-size: 50% !important;
 }
 
+.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
+    font-family: Consolas, Monaco, Arial, "Ubuntu Mono";
+    text-align: center;
+}
+
+
 .reveal p span.slide-title {
   color: black;
   padding: 4px 15px;
   opacity: 0.75 !important;
   border-radius: 15px;
   display: none;
+}
+
+.reveal p {
   text-align: left;
 }
+
 
 .reveal a {
     color: #e7ad52;
@@ -77,7 +91,3 @@ html:-moz-full-screen-ancestor {
 
 .gp-download { margin-left: 10px; }
 
-
-.reveal .slides {
-    font-family: Consolas, Monaco, Arial, "Ubuntu Mono";
-}
