--- a/PITCHME.codemax.css
+++ b/PITCHME.codemax.css
@@ -22,6 +22,7 @@ html:-moz-full-screen-ancestor {
 
 .reveal .slides {
     font-size: 32px !important;
+    text-align: center;
 }
 
 .reveal pre {
@@ -54,7 +55,6 @@ html:-moz-full-screen-ancestor {
     border: 0;
     box-shadow: none;
     text-align: center;
-    align: center;
 }
 
 
