--- a/PITCHME.codemax.css
+++ b/PITCHME.codemax.css
@@ -51,6 +51,16 @@ html:-moz-full-screen-ancestor {
     text-align: center;
 }
 
+.reveal section img {
+    border: 0;
+    box-shadow: none;
+    text-align: center;
+}
+
+.reveal div img {
+    text-align: center;
+}
+
 
 .reveal p span.slide-title {
   color: black;
