--- a/PITCHME.css
+++ b/PITCHME.css
@@ -5,7 +5,7 @@
 
 .reveal pre code {
     max-height: 550px;
-    font-family: Consolas, Monaco, "Ubuntu Mono";
+    font-family: Monaco, "Ubuntu Mono", monospace;
 }
 
 .reveal .slides {
